trying to fix spacing on text and expanding size of feed

--- a/index.css
+++ b/index.css
@@ -62,7 +62,7 @@ img {
     top: 100%;
 
 /*    position:fixed;*/
-    width:500em;
+    width:600em;
     height:100em;
 }
  
